tests/snapshots/run_wpt_conformance__litert_reduceProduct_float16_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float16 3D tensor options.axes, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceProductInput: f16[2, 3, 4];
  }

  nodes {
    [reduceProductOutput] = reduceProduct(reduceProductInput, axes=[2], keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
