tests/snapshots/run_wpt_conformance__litert_reduceProduct_float16_4D_tensor_options_axes_with_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float16 4D tensor options.axes with options.keepDimensions=false, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceProductInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceProductOutput] = reduceProduct(reduceProductInput, axes=[1, 3], keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
